--- a/package.json
+++ b/package.json
@@ -1,28 +1,46 @@
 {
   "name": "douluo-ui",
   "version": "1.0.0",
-  "description": "",
-  "main": "dist/index.js",
-  "module": "dist/index.mjs",
   "private": false,
+  "description": "",
+  "main": "./lib/index.js",
+  "style": "./lib/theme/index.css",
   "scripts": {
-    "dev": "vite --open",
-    "serve": "vite preview",
-    "build": "vite build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "build:lib": "vue-cli-service build --target lib --dest lib --name test-comp-base packages/index.js && npm run build",
+    "docs:dev": "vuepress dev docs",
+    "docs:build": "vuepress build docs",
+    "docs:deploy": "bash ./deploy/docs.sh"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/JefferyXZF/douluo-ui.git"
   },
   "keywords": [],
-  "author": "JefferyXZF",
+  "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/JefferyXZF/douluo-ui/issues"
+  },
+  "homepage": "https://github.com/JefferyXZF/douluo-ui#readme",
   "devDependencies": {
-    "@vue/runtime-dom": "^3.2.37",
-    "typescript": "^4.7.4",
-    "unplugin-vue2-script-setup": "^0.11.0",
-    "vite": "^2.9.14",
-    "vite-plugin-vue2": "^2.0.1",
-    "vue-template-compiler": "^2.7.4"
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
+    "@vuepress/plugin-back-to-top": "^1.9.7",
+    "node-sass": "^4.14.1",
+    "sass": "^1.49.0",
+    "sass-loader": "^7.3.1",
+    "vue-template-compiler": "^2.6.11",
+    "vuepress": "^1.9.7"
   },
   "dependencies": {
-    "vue": "^2.7.4"
+    "core-js": "^3.23.5",
+    "element-ui": "^2.15.9",
+    "vue": "^2.6.11",
+    "vuepress-plugin-demo-container": "^0.2.0"
+  },
+  "peerDependencies": {
+    "element-ui": "^2.15.9"
   }
 }
