--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "build:lib": "vue-cli-service build --target lib --dest lib --name test-comp-base packages/index.js && npm run build",
+    "build:lib": "vue-cli-service build --target lib --dest lib --name duoluo-ui packages/index.js && npm run build",
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs",
     "docs:deploy": "bash ./deploy/docs.sh"
@@ -35,12 +35,9 @@
     "vuepress": "^1.9.7"
   },
   "dependencies": {
-    "core-js": "^3.23.5",
+    "async-validator": "1.11.5",
     "element-ui": "^2.15.9",
     "vue": "^2.6.11",
     "vuepress-plugin-demo-container": "^0.2.0"
-  },
-  "peerDependencies": {
-    "element-ui": "^2.15.9"
   }
 }
