--- a/package.json
+++ b/package.json
@@ -43,7 +43,11 @@
     "vue-cropper": "^0.5.8",
     "vue-router": "^3.5.3",
     "vuepress-plugin-demo-container": "^0.2.0",
+    "vuepress-theme-hope": "^1.30.0",
     "wangeditor": "^4.6.13"
+  },
+  "peerDependencies": {
+    "element-ui": "^2.15.6"
   },
   "devDependencies": {
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.16.7",
