--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lib"
   ],
   "scripts": {
+    "commit" : "git-cz",
     "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "docs:dev": "vuepress dev docs",
@@ -67,6 +68,7 @@
     "babel-plugin-import": "^1.13.3",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-2": "^6.24.1",
+    "commitizen": "^4.2.5",
     "cross-env": "^7.0.3",
     "css-loader": "^6.5.0",
     "cz-conventional-changelog": "^3.3.0",
