--- a/jsconfig.json
+++ b/jsconfig.json
@@ -10,6 +10,6 @@
   "implicitProjectConfig":{
     "experimentalDecorators": true
   },
-  "exclude": ["node_modules", ".nuxt", "dist"]
+  "exclude": ["node_modules", "dist"]
 }
 
