--- a/package.json
+++ b/package.json
@@ -82,7 +82,9 @@
     "cz-customizable": "^6.9.1",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^6.2.2",
     "extract-text-webpack-plugin": "^3.0.2",
     "html-loader": "^1.3.2",
@@ -91,10 +93,21 @@
     "lint-staged": "^13.0.3",
     "markdown-loader": "^6.0.0",
     "node-sass": "^4.14.1",
+    "postcss": "^8.4.14",
+    "postcss-html": "^1.5.0",
+    "postcss-scss": "^4.0.4",
     "prettier": "^2.6.2",
     "sass": "^1.43.4",
     "sass-loader": "^10.0.0",
     "ssh2": "^1.5.0",
+    "stylelint": "^14.9.1",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-recommended-vue": "^1.4.0",
+    "stylelint-config-standard": "^26.0.0",
+    "stylelint-config-standard-scss": "^5.0.0",
+    "stylelint-order": "^5.0.0",
+    "stylelint-scss": "^4.3.0",
+    "vue-eslint-parser": "^9.0.3",
     "vue-markdown-loader": "^2.5.0",
     "vue-template-compiler": "^2.6.14",
     "vuepress": "^1.9.7",
