--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "douluo-ui",
-  "version": "1.1.6",
+  "version": "1.1.7",
   "main": "lib/index.js",
   "description": "douluo-ui Vue2组件库",
   "keywords": [
@@ -23,14 +23,14 @@
     "docs:build": "vuepress build docs",
     "docs:deploy": "bash ./scripts/docs.sh",
     "build:lib": "yarn run build",
+    "release": "standard-version",
     "commit": "git-cz",
-    "release": "standard-version -- --first-release",
+    "changelog": "npx conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "install:husky": "is-ci || husky install",
     "lint:ls-lint": "ls-lint",
     "lint:lint-staged": "lint-staged -c ./.husky/lint-staged.config.js",
     "lint": "vue-cli-service lint && yarn lint:eslint",
-    "lint:eslint": "eslint --ext \\packages\\.js --ext \\examples\\.js --ext \\src\\.js --fix",
-    "changelog": "npx conventional-changelog -p angular -i /docs/developer/changelog.md -s -r 0"
+    "lint:eslint": "eslint --ext \\packages\\.js --ext \\examples\\.js --ext \\src\\.js --fix"
   },
   "dependencies": {
     "async-validator": "^1.11.5",
@@ -77,6 +77,7 @@
     "commitizen": "^4.2.5",
     "commitlint-config-cz": "^0.13.3",
     "conventional-changelog-cli": "^2.2.2",
+    "conventional-changelog-gitmoji-config": "^1.4.3",
     "cross-env": "^7.0.3",
     "css-loader": "^6.5.0",
     "cz-conventional-changelog": "^3.3.0",
