--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "douluo-ui",
-  "version": "1.1.7",
+  "version": "1.1.8",
   "main": "lib/index.js",
   "description": "douluo-ui Vue2组件库",
   "keywords": [
@@ -23,8 +23,8 @@
     "docs:build": "vuepress build docs",
     "docs:deploy": "bash ./scripts/docs.sh",
     "build:lib": "yarn run build",
-    "release": "standard-version",
     "commit": "git-cz",
+    "standard-version": "standard-version",
     "changelog": "npx conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "install:husky": "is-ci || husky install",
     "lint:ls-lint": "ls-lint",
