--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "@vue/eslint-config-standard": "^8.0.1",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "7.2.3",
@@ -76,6 +77,7 @@
     "babel-preset-stage-2": "^6.24.1",
     "commitizen": "^4.2.5",
     "commitlint-config-cz": "^0.13.3",
+    "commitlint-config-gitmoji": "^2.2.5",
     "conventional-changelog-cli": "^2.2.2",
     "conventional-changelog-gitmoji-config": "^1.4.3",
     "cross-env": "^7.0.3",
@@ -83,9 +85,8 @@
     "cz-conventional-changelog": "^3.3.0",
     "cz-customizable": "^6.9.1",
     "eslint": "^7.32.0",
-    "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^6.2.2",
     "extract-text-webpack-plugin": "^3.0.2",
@@ -105,6 +106,7 @@
     "standard-version": "^9.5.0",
     "stylelint": "^14.9.1",
     "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-rational-order": "^0.1.2",
     "stylelint-config-recommended-vue": "^1.4.0",
     "stylelint-config-standard": "^26.0.0",
     "stylelint-config-standard-scss": "^5.0.0",
