--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "douluo-ui",
-  "version": "1.0.1",
+  "version": "1.1.8",
   "main": "lib/index.js",
   "description": "douluo-ui Vue2组件库",
   "keywords": [
@@ -21,8 +21,14 @@
     "build": "vue-cli-service build",
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs",
-    "docs:deploy": "bash ./config/docs.sh",
+    "docs:deploy": "bash ./scripts/docs.sh",
     "build:lib": "yarn run build",
+    "commit": "git-cz",
+    "standard-version": "standard-version",
+    "changelog": "npx conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
+    "install:husky": "is-ci || husky install",
+    "lint:ls-lint": "ls-lint",
+    "lint:lint-staged": "lint-staged -c ./.husky/lint-staged.config.js",
     "lint": "vue-cli-service lint && yarn lint:eslint",
     "lint:eslint": "eslint --ext \\packages\\.js --ext \\examples\\.js --ext \\src\\.js --fix"
   },
@@ -54,11 +60,13 @@
     "@babel/plugin-proposal-optional-chaining": "^7.16.7",
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
+    "@ls-lint/ls-lint": "^1.11.2",
     "@types/lodash": "^4.14.182",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "@vue/eslint-config-standard": "^8.0.1",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "7.2.3",
@@ -67,40 +75,48 @@
     "babel-plugin-import": "^1.13.3",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-2": "^6.24.1",
+    "commitizen": "^4.2.5",
+    "commitlint-config-cz": "^0.13.3",
+    "commitlint-config-gitmoji": "^2.2.5",
+    "conventional-changelog-cli": "^2.2.2",
+    "conventional-changelog-gitmoji-config": "^1.4.3",
     "cross-env": "^7.0.3",
     "css-loader": "^6.5.0",
     "cz-conventional-changelog": "^3.3.0",
+    "cz-customizable": "^6.9.1",
     "eslint": "^7.32.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.25.2",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^6.2.2",
     "extract-text-webpack-plugin": "^3.0.2",
     "html-loader": "^1.3.2",
     "husky": "^7.0.4",
+    "is-ci": "^3.0.1",
+    "lint-staged": "^13.0.3",
     "markdown-loader": "^6.0.0",
     "node-sass": "^4.14.1",
+    "postcss": "^8.4.14",
+    "postcss-html": "^1.5.0",
+    "postcss-scss": "^4.0.4",
     "prettier": "^2.6.2",
     "sass": "^1.43.4",
     "sass-loader": "^10.0.0",
     "ssh2": "^1.5.0",
+    "standard-version": "^9.5.0",
+    "stylelint": "^14.9.1",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-rational-order": "^0.1.2",
+    "stylelint-config-recommended-vue": "^1.4.0",
+    "stylelint-config-standard": "^26.0.0",
+    "stylelint-config-standard-scss": "^5.0.0",
+    "stylelint-order": "^5.0.0",
+    "stylelint-scss": "^4.3.0",
+    "vue-eslint-parser": "^9.0.3",
     "vue-markdown-loader": "^2.5.0",
     "vue-template-compiler": "^2.6.14",
     "vuepress": "^1.9.7",
     "webpack": "^4.46.0"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "babel-eslint"
-    },
-    "rules": {}
   },
   "browserslist": [
     "> 1%",
@@ -109,7 +125,7 @@
   ],
   "config": {
     "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
+      "path": "./node_modules/cz-customizable"
     }
   }
 }
