--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "douluo-ui",
-  "version": "1.1.8",
+  "version": "1.0.3",
   "main": "lib/index.js",
   "description": "douluo-ui Vue2组件库",
   "keywords": [
@@ -23,6 +23,7 @@
     "docs:build": "vuepress build docs",
     "docs:deploy": "bash ./scripts/docs.sh",
     "build:lib": "yarn run build",
+    "rollup:lib": "cross-env NODE_ENV=production rimraf ./lib && node ./build/rollup-build",
     "commit": "git-cz",
     "standard-version": "standard-version",
     "changelog": "npx conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
@@ -82,6 +83,7 @@
     "conventional-changelog-gitmoji-config": "^1.4.3",
     "cross-env": "^7.0.3",
     "css-loader": "^6.5.0",
+    "cssnano": "^5.1.12",
     "cz-conventional-changelog": "^3.3.0",
     "cz-customizable": "^6.9.1",
     "eslint": "^7.32.0",
@@ -95,13 +97,30 @@
     "is-ci": "^3.0.1",
     "lint-staged": "^13.0.3",
     "markdown-loader": "^6.0.0",
-    "node-sass": "^4.14.1",
+    "node-sass": "^7.0.1",
     "postcss": "^8.4.14",
+    "postcss-cssnext": "^3.1.1",
     "postcss-html": "^1.5.0",
+    "postcss-nested": "^5.0.6",
     "postcss-scss": "^4.0.4",
+    "postcss-simple-vars": "^6.0.3",
     "prettier": "^2.6.2",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.77.2",
+    "rollup-plugin-alias": "^2.2.0",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-filesize": "^9.1.2",
+    "rollup-plugin-img": "^1.1.0",
+    "rollup-plugin-json": "^4.0.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-replace": "^2.2.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-vue": "^5.1.9",
     "sass": "^1.43.4",
     "sass-loader": "^10.0.0",
+    "scss": "^0.2.4",
     "ssh2": "^1.5.0",
     "standard-version": "^9.5.0",
     "stylelint": "^14.9.1",
