:construction_worker: ci: gulp 打包scss

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "douluo-ui",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "main": "lib/index.cjs.min.js",
   "module": "lib/index.es.min.js",
   "description": "douluo-ui Vue2组件库",
@@ -20,11 +20,12 @@
   "scripts": {
     "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "gulp-build:css": "gulp build",
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs",
     "docs:deploy": "bash ./scripts/docs.sh",
     "build:lib": "yarn run build",
-    "rollup:lib": "cross-env NODE_ENV=production rimraf ./lib && node ./build/rollup-build",
+    "rollup:lib": "cross-env NODE_ENV=production rimraf ./lib && node ./build/rollup-build && npm run gulp-build:css",
     "commit": "git-cz",
     "standard-version": "standard-version",
     "changelog": "npx conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
@@ -90,18 +91,20 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^6.2.2",
     "extract-text-webpack-plugin": "^3.0.2",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^8.0.0",
+    "gulp-cssmin": "^0.2.0",
+    "gulp-sass": "^5.1.0",
     "html-loader": "^1.3.2",
     "husky": "^7.0.4",
     "is-ci": "^3.0.1",
     "lint-staged": "^13.0.3",
     "markdown-loader": "^6.0.0",
-    "node-sass": "^7.0.1",
     "postcss": "^8.4.14",
     "postcss-css-variables": "^0.18.0",
     "postcss-cssnext": "^3.1.1",
     "postcss-html": "^1.5.0",
     "postcss-nested": "^5.0.6",
-    "postcss-scss": "^4.0.4",
     "postcss-simple-vars": "^6.0.3",
     "prettier": "^2.6.2",
     "rimraf": "^3.0.2",
@@ -118,9 +121,8 @@
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-vue": "^5.1.9",
-    "sass": "^1.43.4",
-    "sass-loader": "^10.0.0",
-    "scss": "^0.2.4",
+    "sass": "^1.54.3",
+    "sass-loader": "^10.1.1",
     "ssh2": "^1.5.0",
     "standard-version": "^9.5.0",
     "stylelint": "^14.9.1",
@@ -128,9 +130,7 @@
     "stylelint-config-rational-order": "^0.1.2",
     "stylelint-config-recommended-vue": "^1.4.0",
     "stylelint-config-standard": "^26.0.0",
-    "stylelint-config-standard-scss": "^5.0.0",
     "stylelint-order": "^5.0.0",
-    "stylelint-scss": "^4.3.0",
     "vue-eslint-parser": "^9.0.3",
     "vue-markdown-loader": "^2.5.0",
     "vue-template-compiler": "^2.6.14",
