:construction_worker: ci: 字体图标打包

--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
     "@ls-lint/ls-lint": "^1.11.2",
+    "@rollup/plugin-image": "^2.1.1",
     "@types/lodash": "^4.14.182",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
@@ -114,7 +115,6 @@
     "rollup-plugin-cleanup": "^3.2.1",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-filesize": "^9.1.2",
-    "rollup-plugin-img": "^1.1.0",
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-postcss": "^4.0.2",
