:sparkles: feat: vite 替换 vue-cli

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "douluo-ui",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "main": "lib/index.cjs.min.js",
   "module": "lib/index.es.min.js",
   "description": "douluo-ui Vue2组件库",
@@ -18,14 +18,12 @@
     "lib"
   ],
   "scripts": {
-    "dev": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "gulp-build:css": "gulp build",
+    "dev": "vite",
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs",
     "docs:deploy": "bash ./scripts/docs.sh",
-    "build:lib": "yarn run build",
-    "rollup:lib": "cross-env NODE_ENV=production rimraf ./lib && node ./build/rollup-build && npm run gulp-build:css",
+    "gulp-build:css": "gulp build",
+    "build:lib": "cross-env NODE_ENV=production rimraf ./lib && node ./build/rollup-build && npm run gulp-build:css",
     "commit": "git-cz",
     "standard-version": "standard-version",
     "changelog": "npx conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
@@ -56,17 +54,13 @@
     "wangeditor": "^4.6.13"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.16.7",
-    "@babel/plugin-proposal-optional-chaining": "^7.16.7",
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
     "@ls-lint/ls-lint": "^1.11.2",
     "@rollup/plugin-image": "^2.1.1",
     "@types/lodash": "^4.14.182",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@vitejs/plugin-legacy": "^2.0.1",
+    "@vitejs/plugin-vue2": "^1.1.2",
     "@vue/eslint-config-standard": "^8.0.1",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
@@ -131,6 +125,8 @@
     "stylelint-config-recommended-vue": "^1.4.0",
     "stylelint-config-standard": "^26.0.0",
     "stylelint-order": "^5.0.0",
+    "unplugin-vue-components": "^0.22.4",
+    "vite": "^3.0.7",
     "vue-eslint-parser": "^9.0.3",
     "vue-markdown-loader": "^2.5.0",
     "vue-template-compiler": "^2.6.14",
