:memo: docs(docs): scss 开发文档

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "douluo-ui",
-  "version": "1.0.6",
+  "version": "1.0.2",
   "main": "lib/index.cjs.min.js",
   "module": "lib/index.es.min.js",
   "description": "douluo-ui Vue2组件库",
@@ -30,35 +30,23 @@
     "install:husky": "is-ci || husky install",
     "lint:ls-lint": "ls-lint",
     "lint:lint-staged": "lint-staged -c ./.husky/lint-staged.config.js",
-    "lint": "vue-cli-service lint && yarn lint:eslint",
     "lint:eslint": "eslint --ext \\packages\\.js --ext \\examples\\.js --ext \\src\\.js --fix"
   },
   "dependencies": {
     "async-validator": "^1.11.5",
     "axios": "^0.26.0",
     "core-js": "^3.6.5",
-    "css-vars-ponyfill": "^2.4.7",
     "element-ui": "^2.15.9",
-    "highlight.js": "^11.3.1",
-    "lodash": "^4.17.21",
-    "mark.js": "^8.11.1",
-    "markdown-it": "^12.2.0",
-    "markdown-it-anchor": "^8.4.1",
-    "markdown-it-container": "^3.0.0",
-    "transliteration": "^2.2.0",
     "vue": "^2.6.11",
-    "vue-cropper": "^0.5.8",
     "vue-router": "^3.5.3",
     "vuepress-plugin-demo-container": "^0.2.0",
-    "vuepress-theme-hope": "^1.30.0",
-    "wangeditor": "^4.6.13"
+    "vuepress-theme-hope": "^1.30.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
     "@ls-lint/ls-lint": "^1.11.2",
     "@rollup/plugin-image": "^2.1.1",
-    "@types/lodash": "^4.14.182",
     "@vitejs/plugin-legacy": "^2.0.1",
     "@vitejs/plugin-vue2": "^1.1.2",
     "@vue/eslint-config-standard": "^8.0.1",
@@ -94,7 +82,6 @@
     "husky": "^7.0.4",
     "is-ci": "^3.0.1",
     "lint-staged": "^13.0.3",
-    "markdown-loader": "^6.0.0",
     "postcss": "^8.4.14",
     "postcss-css-variables": "^0.18.0",
     "postcss-cssnext": "^3.1.1",
@@ -128,7 +115,6 @@
     "unplugin-vue-components": "^0.22.4",
     "vite": "^3.0.7",
     "vue-eslint-parser": "^9.0.3",
-    "vue-markdown-loader": "^2.5.0",
     "vue-template-compiler": "^2.6.14",
     "vuepress": "^1.9.7",
     "webpack": "^4.46.0"
