✨ feat: vite 替换 vue-cli，css 变量和 scss 变量换肤 (#2)
vite 替换 vue-cli，css 变量和 scss 变量换肤 #2

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ node_modules
 .cache
 /lib
 /dist
+/styles/theme/**
 
 # local env files
 .env.local
@@ -23,3 +24,4 @@ pnpm-debug.log*
 *.njsproj
 *.sln
 *.sw?
+*.tgz
