--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "douluo-ui",
-  "version": "1.1.8",
-  "main": "lib/index.js",
+  "version": "1.0.2",
+  "main": "lib/index.cjs.min.js",
+  "module": "lib/index.es.min.js",
   "description": "douluo-ui Vue2组件库",
   "keywords": [
     "vue",
@@ -17,55 +18,37 @@
     "lib"
   ],
   "scripts": {
-    "dev": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "dev": "vite",
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs",
     "docs:deploy": "bash ./scripts/docs.sh",
-    "build:lib": "yarn run build",
+    "gulp-build:css": "gulp build",
+    "build:lib": "cross-env NODE_ENV=production rimraf ./lib && node ./build/rollup-build && npm run gulp-build:css",
     "commit": "git-cz",
     "standard-version": "standard-version",
     "changelog": "npx conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "install:husky": "is-ci || husky install",
     "lint:ls-lint": "ls-lint",
     "lint:lint-staged": "lint-staged -c ./.husky/lint-staged.config.js",
-    "lint": "vue-cli-service lint && yarn lint:eslint",
     "lint:eslint": "eslint --ext \\packages\\.js --ext \\examples\\.js --ext \\src\\.js --fix"
   },
   "dependencies": {
     "async-validator": "^1.11.5",
     "axios": "^0.26.0",
     "core-js": "^3.6.5",
-    "css-vars-ponyfill": "^2.4.7",
-    "element-ui": "^2.15.6",
-    "highlight.js": "^11.3.1",
-    "lodash": "^4.17.21",
-    "mark.js": "^8.11.1",
-    "markdown-it": "^12.2.0",
-    "markdown-it-anchor": "^8.4.1",
-    "markdown-it-container": "^3.0.0",
-    "transliteration": "^2.2.0",
+    "element-ui": "^2.15.9",
     "vue": "^2.6.11",
-    "vue-cropper": "^0.5.8",
     "vue-router": "^3.5.3",
     "vuepress-plugin-demo-container": "^0.2.0",
-    "vuepress-theme-hope": "^1.30.0",
-    "wangeditor": "^4.6.13"
-  },
-  "peerDependencies": {
-    "element-ui": "^2.15.6"
+    "vuepress-theme-hope": "^1.30.0"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.16.7",
-    "@babel/plugin-proposal-optional-chaining": "^7.16.7",
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
     "@ls-lint/ls-lint": "^1.11.2",
-    "@types/lodash": "^4.14.182",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@rollup/plugin-image": "^2.1.1",
+    "@vitejs/plugin-legacy": "^2.0.1",
+    "@vitejs/plugin-vue2": "^1.1.2",
     "@vue/eslint-config-standard": "^8.0.1",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
@@ -82,6 +65,7 @@
     "conventional-changelog-gitmoji-config": "^1.4.3",
     "cross-env": "^7.0.3",
     "css-loader": "^6.5.0",
+    "cssnano": "^5.1.12",
     "cz-conventional-changelog": "^3.3.0",
     "cz-customizable": "^6.9.1",
     "eslint": "^7.32.0",
@@ -90,18 +74,36 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^6.2.2",
     "extract-text-webpack-plugin": "^3.0.2",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^8.0.0",
+    "gulp-cssmin": "^0.2.0",
+    "gulp-sass": "^5.1.0",
     "html-loader": "^1.3.2",
     "husky": "^7.0.4",
     "is-ci": "^3.0.1",
     "lint-staged": "^13.0.3",
-    "markdown-loader": "^6.0.0",
-    "node-sass": "^4.14.1",
     "postcss": "^8.4.14",
+    "postcss-css-variables": "^0.18.0",
+    "postcss-cssnext": "^3.1.1",
     "postcss-html": "^1.5.0",
-    "postcss-scss": "^4.0.4",
+    "postcss-nested": "^5.0.6",
+    "postcss-simple-vars": "^6.0.3",
     "prettier": "^2.6.2",
-    "sass": "^1.43.4",
-    "sass-loader": "^10.0.0",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.77.2",
+    "rollup-plugin-alias": "^2.2.0",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-cleanup": "^3.2.1",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-filesize": "^9.1.2",
+    "rollup-plugin-json": "^4.0.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-replace": "^2.2.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-vue": "^5.1.9",
+    "sass": "^1.54.3",
+    "sass-loader": "^10.1.1",
     "ssh2": "^1.5.0",
     "standard-version": "^9.5.0",
     "stylelint": "^14.9.1",
@@ -109,11 +111,10 @@
     "stylelint-config-rational-order": "^0.1.2",
     "stylelint-config-recommended-vue": "^1.4.0",
     "stylelint-config-standard": "^26.0.0",
-    "stylelint-config-standard-scss": "^5.0.0",
     "stylelint-order": "^5.0.0",
-    "stylelint-scss": "^4.3.0",
+    "unplugin-vue-components": "^0.22.4",
+    "vite": "^3.0.7",
     "vue-eslint-parser": "^9.0.3",
-    "vue-markdown-loader": "^2.5.0",
     "vue-template-compiler": "^2.6.14",
     "vuepress": "^1.9.7",
     "webpack": "^4.46.0"
