--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lib"
   ],
   "scripts": {
+    "bootstrap": "yarn || npm install",
     "dev": "vite",
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs",
@@ -65,7 +66,6 @@
     "conventional-changelog-gitmoji-config": "^1.4.3",
     "cross-env": "^7.0.3",
     "css-loader": "^6.5.0",
-    "cssnano": "^5.1.12",
     "cz-conventional-changelog": "^3.3.0",
     "cz-customizable": "^6.9.1",
     "eslint": "^7.32.0",
@@ -82,12 +82,6 @@
     "husky": "^7.0.4",
     "is-ci": "^3.0.1",
     "lint-staged": "^13.0.3",
-    "postcss": "^8.4.14",
-    "postcss-css-variables": "^0.18.0",
-    "postcss-cssnext": "^3.1.1",
-    "postcss-html": "^1.5.0",
-    "postcss-nested": "^5.0.6",
-    "postcss-simple-vars": "^6.0.3",
     "prettier": "^2.6.2",
     "rimraf": "^3.0.2",
     "rollup": "^2.77.2",
